force-app/main/default/objects/Project__c/fields/AdminAgent__c.field-meta.xml
<CustomField>
    <fullName>AdminAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Representa o Administrador associado a essa solicitação.</description>
    <inlineHelpText>O agente administrator que dará andamento com a solicitação.</inlineHelpText>
    <label>Admin Agent</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>O usuário não está ativo ou não é administrador.</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>