force-app/main/default/objects/Project__c/fields/Estimated_Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Finish_Date__c</fullName>
    <description>Define a data de entrega com base na prioridade da solicitação.</description>
    <formula>CASE(Priority__c, &quot;Low&quot;, TODAY() + 7, &quot;Medium&quot;, TODAY()+5,&quot;High&quot;,TODAY()+3,&quot;Critical&quot;,TODAY()+1,TODAY())</formula>
    <label>Estimated Finish Date</label>
    <type>Date</type>
</CustomField>