force-app/main/default/objects/Project__c/fields/Requested_User_Role__c.field-meta.xml
<CustomField>
    <fullName>Requested_User_Role__c</fullName>
    <formula>RequestedBy__r.UserRole.Name</formula>
    <label>Requested User Role</label>
    <type>Text</type>
</CustomField>