force-app/main/default/objects/Project__c/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>O usuário quem realizou a solicitação</description>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>