force-app/main/default/objects/Project__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Descrição sucinta sobre o que é essa solicitação.</description>
    <inlineHelpText>Breve descrição do que se trata essa solicitação.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>